fix: Corrigida tipagem no tipo da variável 'mapeamento'
Aula: 28.2. Removendo componentes incompatíveis